# the-band

./: .gitignore  README.md  index.html  package-lock.json  package.json  vercel-build.sh  vercel.json  vite.config.js
rust/band_engine/: Cargo.toml  LICENSE
rust/band_engine/src/: euclid.rs  instruments.rs  lib.rs  music.rs  percussion.rs  render.rs  rng.rs  sequence.rs  synth.rs  utils.rs
src/: main.js  names.js  rng.js  sprites.js  styles.css  ui.js
src/audio/: audio-controller.js  band-worklet.js  buffer-worklet.js  fallback-renderer.js  probe-worklet.js
